force-app/main/default/objects/Task_Item__c/Task_Item__c.object-meta.xml
<CustomObject>
    <label>Task Item</label>
    <nameField>
        <label>Task Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>