force-app/main/default/objects/Task_Item__c/fields/Due_Date_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Indicator__c</fullName>
    <formula
  >IF(Due_Date__c &lt; TODAY(), &quot;Overdue&quot;, &quot;On Track&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Indicator</label>
    <type>Text</type>
</CustomField>